// Vitest Snapshot v1

exports[`search > should with namespace & collapse 1`] = `
[
  {
    "as": "Avatar",
    "from": "src/components/global/avatar.vue",
  },
  {
    "as": "Book",
    "from": "src/components/book/index.vue",
  },
  {
    "as": "CollapseFolderAndComponentPrefixes",
    "from": "src/components/collapse/collapseFolderAnd/CollapseFolderAndComponentPrefixes.vue",
  },
  {
    "as": "ComponentA",
    "from": "src/components/ComponentA.vue",
  },
  {
    "as": "ComponentAsync",
    "from": "src/components/ComponentAsync.vue",
  },
  {
    "as": "ComponentB",
    "from": "src/components/ComponentB.vue",
  },
  {
    "as": "ComponentC",
    "from": "src/components/component-c.vue",
  },
  {
    "as": "ComponentD",
    "from": "src/components/ComponentD.vue",
  },
  {
    "as": "Recursive",
    "from": "src/components/Recursive.vue",
  },
  {
    "as": "UiButton",
    "from": "src/components/ui/button.vue",
  },
  {
    "as": "UiNestedCheckbox",
    "from": "src/components/ui/nested/checkbox.vue",
  },
]
`;

exports[`search > should with namespace 1`] = `
[
  {
    "as": "Avatar",
    "from": "src/components/global/avatar.vue",
  },
  {
    "as": "Book",
    "from": "src/components/book/index.vue",
  },
  {
    "as": "CollapseCollapseFolderAndCollapseFolderAndComponentPrefixes",
    "from": "src/components/collapse/collapseFolderAnd/CollapseFolderAndComponentPrefixes.vue",
  },
  {
    "as": "ComponentA",
    "from": "src/components/ComponentA.vue",
  },
  {
    "as": "ComponentAsync",
    "from": "src/components/ComponentAsync.vue",
  },
  {
    "as": "ComponentB",
    "from": "src/components/ComponentB.vue",
  },
  {
    "as": "ComponentC",
    "from": "src/components/component-c.vue",
  },
  {
    "as": "ComponentD",
    "from": "src/components/ComponentD.vue",
  },
  {
    "as": "Recursive",
    "from": "src/components/Recursive.vue",
  },
  {
    "as": "UiButton",
    "from": "src/components/ui/button.vue",
  },
  {
    "as": "UiNestedCheckbox",
    "from": "src/components/ui/nested/checkbox.vue",
  },
]
`;

exports[`search > should work 1`] = `
[
  {
    "as": "Avatar",
    "from": "src/components/global/avatar.vue",
  },
  {
    "as": "Book",
    "from": "src/components/book/index.vue",
  },
  {
    "as": "Button",
    "from": "src/components/ui/button.vue",
  },
  {
    "as": "Checkbox",
    "from": "src/components/ui/nested/checkbox.vue",
  },
  {
    "as": "CollapseFolderAndComponentPrefixes",
    "from": "src/components/collapse/collapseFolderAnd/CollapseFolderAndComponentPrefixes.vue",
  },
  {
    "as": "ComponentA",
    "from": "src/components/ComponentA.vue",
  },
  {
    "as": "ComponentAsync",
    "from": "src/components/ComponentAsync.vue",
  },
  {
    "as": "ComponentB",
    "from": "src/components/ComponentB.vue",
  },
  {
    "as": "ComponentC",
    "from": "src/components/component-c.vue",
  },
  {
    "as": "ComponentD",
    "from": "src/components/ComponentD.vue",
  },
  {
    "as": "Recursive",
    "from": "src/components/Recursive.vue",
  },
]
`;
